config connectionString to DB

--- a/TodoApp/appsettings.json
+++ b/TodoApp/appsettings.json
@@ -3,7 +3,7 @@
     "SelfUrl": "https://localhost:44362"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=TodoApp;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=DESKTOP-0MMQTVR;Database=TodoApp;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "StringEncryption": {
     "DefaultPassPhrase": "E5KYvYg4xQYB1MjK"
